# kuro

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Build-README.md  CHANGELOG.md  Dockerfile  HLint.hs  README.md  cabal.project  create_aws_confs.sh  default.nix  juno.cabal  junoclient.sh  kadena.cabal  kadenaclient.sh  kuro.cabal  overrides.nix  project.nix  prometheus.yml  servers.sh  stack-docker-example.yaml  stack-docker.yaml  stack.yaml
bench/: AerService.hs
conf/: 10000-cluster.yaml  10001-cluster.yaml  10002-cluster.yaml  10003-cluster.yaml  10004-client.yaml  admin0-keypair.yaml  client.yaml  client0-client.yaml
demo/: 2keys.yaml  createAccount.txt  demo.json  demo.pact  demo.repl  demo.yaml  nohup-start.sh  orders.pact  orders.txt  orders.yaml  run-inserts.sh  start-aws-local.sh  start-no-persistence.sh  start.sh  transfer.txt
demoui/: header-nav.js  index.js
docker/: centos6-base.Dockerfile  centos6-build.Dockerfile  ubuntu-base.Dockerfile  ubuntu-build.Dockerfile
docs/: KadenaBeta-v1.md
executables/: GenerateConfigFiles.hs  KadenaClient.hs  KadenaServer.hs
executables/bolosim/: Main.hs  deleteFiles.sh
executables/bolosim/conf/: 10000-cluster.yaml  10001-cluster.yaml  10002-cluster.yaml  10003-cluster.yaml  create_order.yml  initialize_accounts.yml  initialize_orders.yml
executables/bolosim/pact/: accounts.pact  orders.pact
executables/inserts/: Main.hs  deleteFiles.sh
executables/inserts/conf/: 10000-cluster.yaml  10001-cluster.yaml  10002-cluster.yaml  10003-cluster.yaml
kadena-beta/aws/: ansible_vars.yml  get_server_logs.yml  start_aws_demo.sh  stop_instances.yml
kadena-beta/aws/setup-aws-scripts/: setup-ubuntu-base.sh
kadena-beta/aws/templates/: ipAddr.j2
kadena-beta/conf/: 10000-cluster.yaml  10001-cluster.yaml  10002-cluster.yaml  10003-cluster.yaml  admin0-keypair.yaml  client0-client.yaml
kadena-beta/docker/: ubuntu-base.Dockerfile
kadena-beta/docs/: Ansible-README.md  Grafana-README.md  Kadena-README.md  KadenaBeta-v1.md
kadena-beta/payments/: demo.repl
kadena-beta/scripts/: create_aws_confs.sh
kadena-beta/setup/: centos6-base.Dockerfile  setup-ubuntu-base.sh
kadena-beta/static/: todomvc
kadena-beta/static/monitor/: bundle.js  grafana-dashboard.json  light.css
monitor/: consensus.js  grafana-dashboard.json  health.js  index.js  nodes.js  package.json  prometheus.yml  webpack.config.js
monitor/public/: light.css  styles.css
nix/: deployment-notes.md
nix/conf/: 10000-cluster.yaml  10001-cluster.yaml  10002-cluster.yaml  10003-cluster.yaml  client.yaml  kadenaclient.sh
perftests/: perfBatch2000  perfBatch5000  test1
readonly_keys/: functional_rsa  functional_rsa.pub
scripts/: ansible_aws_README.md  aws-load-test.sh  aws_setup.sh  build-beta-distro.sh  build-beta-distro.ubuntu-16.04.sh  build-via-docker.ubuntu-16.04.sh  build_via_docker.sh  connect-to-r3.sh  create_aws_confs.sh  run_load_test.yml  servers.sh  setup-aws.sh  setup-ubuntu-base.sh  test-no-wb.sh  test-pact-type.sh
scripts/aws/: Ansible-README.md  README.md  ansible_vars.yml  edit_conf.yml  get_server_logs.yml  ipAddr.j2  run_load_test.yml  run_servers.yml  setup-aws-exports.sh  setup_aws.sh  start_aws.sh  start_aws_demo.sh  start_instances.yml  start_servers.yml  stop_instances.yml  stop_servers.yml
scripts/aws/setup/: setup_aws.sh
scripts/aws/setup-aws-scripts/: setup-ansible.sh
scripts/aws/templates/: conf.j2
src/Apps/: AERTest.hs
src/Apps/Juno/: ApiHandlers.hs  Client.hs  Command.hs  JsonTypes.hs  Parser.hs  Server.hs
src/Apps/Kadena/: ApiHandlers.hs  Client.hs  JsonTypes.hs  Server.hs
src/Juno/: Types.hs
src/Juno/Command/: CommandLayer.hs  Types.hs
src/Juno/Consensus/: Api.hs  Client.hs  Commit.hs  Handle.hs  Server.hs
src/Juno/Hoplite/: Transmatic.hs
src/Juno/Messaging/: TestRig.hs  Types.hs  ZMQ.hs
src/Juno/Monitoring/: Server.hs
src/Juno/Persistence/: SQLite.hs
src/Juno/Runtime/: MessageReceiver.hs  Role.hs  Sender.hs  Timer.hs
src/Juno/Service/: Evidence.hs  Log.hs  Sender.hs
src/Juno/Spec/: Simple.hs  TestRig.hs
src/Juno/Types/: Base.hs  Command.hs  Comms.hs  Config.hs  Dispatch.hs  Event.hs  Evidence.hs  Log.hs  Message.hs  Metric.hs  Sender.hs  Spec.hs
src/Juno/Util/: Combinator.hs  Util.hs
src/Kadena/: Command.hs  Config.hs  ConfigChange.hs  Crypto.hs  Event.hs  Log.hs  Message.hs  Orphans.hs  Types.hs
src/Kadena/Command/: CommandLayer.hs  PactSqlLite.hs  Types.hs
src/Kadena/Commit/: Pact.hs  Service.hs  Types.hs
src/Kadena/Config/: ClusterMembership.hs  TMVar.hs  Types.hs
src/Kadena/ConfigChange/: Service.hs  Types.hs  Util.hs
src/Kadena/Consensus/: Api.hs  Client.hs  Commit.hs  Handle.hs  Publish.hs  Server.hs  Service.hs  Util.hs
src/Kadena/Evidence/: Service.hs  Spec.hs  Types.hs
src/Kadena/Execution/: ConfigChange.hs  Pact.hs  Service.hs  Types.hs
src/Kadena/HTTP/: ApiServer.hs  Static.hs  Types.hs
src/Kadena/History/: Persistence.hs  Service.hs  Types.hs
src/Kadena/Log/: LogApi.hs  Persistence.hs  Service.hs  Types.hs
src/Kadena/Messaging/: Turbine.hs  ZMQ.hs
src/Kadena/Monitoring/: EkgJson.hs  EkgMonitor.hs  EkgSnap.hs  Server.hs
src/Kadena/Persistence/: SQLite.hs
src/Kadena/PreProc/: Service.hs  Types.hs
src/Kadena/Private/: Private.hs  Service.hs  Simulate.hs  Types.hs
src/Kadena/Runtime/: MessageReceiver.hs  Role.hs  Timer.hs
src/Kadena/Sender/: Service.hs  Types.hs
src/Kadena/Service/: Commit.hs  Evidence.hs  Log.hs  Sender.hs
static/monitor/: index.html  styles.css
test-files/: commands.txt  deleteFiles.sh  demo.pact  test.pact  test.yaml
test-files/conf/: 10000-cluster.yaml  10001-cluster.yaml  10002-cluster.yaml  10003-cluster.yaml  config-change-00.yaml  config-change-01.yaml  config-change-01b.yaml  config-change-02.yaml  config-change-03.yaml  config-change-04.yaml
tests/: CacheAdapterSpec.hs  ConfigChangeFileSpec.hs  ConfigChangeSpec.hs  ConfigSpec.hs  EvidenceSpec-Disabled.hs  EvidenceSpec.hs  LogSpec-Disabled.hs  LogSpec.hs  WireFormatSpec.hs
tests/Rest/: juno_rest_request.sh
tests/Util/: TestRunner.hs
(+89 files in other folders)
