name:                kadena
version:             1.3.0.0
synopsis:            A high performance private blockchain.
description:         An implementation of ScalableBFT running Pact as the Smart Contract Language
homepage:            https://github.com/buckie/kadena
author:              Will Martino
maintainer:          will@kadena.io
copyright:           Copyright (C) 2014-2015 Chris Copeland, Copyright 2015-2017 (C) Will Martino, Stuart Popejoy

license:             BSD3
license-file:        LICENSE

category:            Network
build-type:          Simple
cabal-version:       >=1.22

source-repository head
  type:     git
  location: git@github.com:buckie/kadena.git

flag kill-switch
    description: Build with Beta kill switches enabled
    manual: True
    default: False

flag aws-kill-switch
    description: Build with AWS kill switches enabled
    manual: True
    default: False

flag pact-persistence
    description: enable pact persistence
    manual: True
    default: False

library
  exposed-modules:     Apps.Kadena.Client
                     , Apps.Kadena.Server
                     , Kadena.Execution.Pact
                     , Kadena.Execution.Service
                     , Kadena.Command
                     , Kadena.Config
                     , Kadena.Config.ClusterMembership
                     , Kadena.Config.TMVar
                     , Kadena.ConfigChange
                     , Kadena.ConfigChange.Util
                     , Kadena.Consensus.Handle
                     , Kadena.Consensus.Handle.AppendEntries
                     , Kadena.Consensus.Handle.Command
                     , Kadena.Consensus.Handle.ElectionTimeout
                     , Kadena.Consensus.Handle.HeartbeatTimeout
                     , Kadena.Consensus.Handle.RequestVote
                     , Kadena.Consensus.Handle.RequestVoteResponse
                     , Kadena.Consensus.Publish
                     , Kadena.Consensus.Service
                     , Kadena.Consensus.Util
                     , Kadena.Event
                     , Kadena.Evidence.Service
                     , Kadena.Evidence.Spec
                     , Kadena.Execution.ConfigChange
                     , Kadena.HTTP.ApiServer
                     , Kadena.History.Persistence
                     , Kadena.History.Service
                     , Kadena.Log
                     , Kadena.Log.LogApi
                     , Kadena.Log.Persistence
                     , Kadena.Log.Service
                     , Kadena.Log.Types
                     , Kadena.Message
                     , Kadena.Messaging.Turbine
                     , Kadena.Messaging.Turbine.AER
                     , Kadena.Messaging.Turbine.General
                     , Kadena.Messaging.Turbine.NewCMD
                     , Kadena.Messaging.Turbine.RV
                     , Kadena.Messaging.Turbine.Util
                     , Kadena.Messaging.ZMQ
                     , Kadena.Monitoring.EkgJson
                     , Kadena.Monitoring.EkgMonitor
                     , Kadena.Monitoring.EkgSnap
                     , Kadena.Monitoring.Server
                     , Kadena.PreProc.Service
                     , Kadena.Private.Private
                     , Kadena.Private.Service
                     , Kadena.Sender.Service
                     , Kadena.Spec.Simple
                     , Kadena.Types
                     , Kadena.Types.Base
                     , Kadena.Types.Command
                     , Kadena.Types.Comms
                     , Kadena.Types.Config
                     , Kadena.Types.ConfigChange
                     , Kadena.Types.Crypto
                     , Kadena.Types.Dispatch
                     , Kadena.Types.Entity
                     , Kadena.Types.Event
                     , Kadena.Types.Evidence
                     , Kadena.Types.Execution
                     , Kadena.Types.History
                     , Kadena.Types.HTTP
                     , Kadena.Types.Log
                     , Kadena.Types.Message
                     , Kadena.Types.Message.AE
                     , Kadena.Types.Message.AER
                     , Kadena.Types.Message.NewCMD
                     , Kadena.Types.Message.RV
                     , Kadena.Types.Message.RVR
                     , Kadena.Types.Message.Signed
                     , Kadena.Types.Metric
                     , Kadena.Types.PactDB
                     , Kadena.Types.PreProc
                     , Kadena.Types.Private
                     , Kadena.Types.Sender
                     , Kadena.Types.Spec
                     , Kadena.Types.Sqlite
                     , Kadena.Types.Turbine
                     , Kadena.Util.Util

  build-depends:       BoundedChan
                     , aeson
                     , aeson-pretty
                     , ansi-wl-pprint
                     , array
                     , async
                     , attoparsec
                     , auto-update
                     , base < 5
                     , base16-bytestring
                     , base64-bytestring >= 1.0.0.1 && < 1.1
                     , binary
                     , bloomfilter
                     , bound
                     , bytestring
                     , Cabal
                     , cacophony
                     , cereal >= 0.5.4.0
                     , containers
                     , criterion
                     , crypto-api
                     , cryptonite
                     , data-default
                     , deepseq >= 1.4.2.0
                     , direct-sqlite
                     , directory
                     , ed25519-donna
                     , ekg >= 0.4 && < 0.5
                     , ekg-core >= 0.1.1.0 && < 0.2
                     , ekg-json
                     , enclosed-exceptions
                     , errors
                     , exceptions
                     , extra
                     , fast-logger
                     , filepath
                     , ghc-prim
                     , hashable
                     , hspec
                     , http-client
                     , lens >= 4.15
                     , lens-aeson
                     , lifted-base
                     , lz4
                     , megaparsec >= 7
                     , memory >= 0.13
                     , monad-control
                     , monad-loops
                     , monad-par
                     , mtl
                     , mtl-compat
                     , mysql >= 0.1 && < 0.2
                     , network
                     , pact == 3.3.*
                     , pact-persist == 1.0.*
                     , parallel
                     , parsers
                     , prelude-extras
                     , primitive
                     , process
                     , random
                     , safe
                     , safe-exceptions >= 0.1.4.0
                     , scientific >= 0.3.6.2
                     , semigroups
                     , servant
                     , servant-client
                     , servant-client-core
                     , snap-core
                     , servant-server
                     , snap-server
                     , sqlite-simple
                     , stm
                     , strict-tuple >= 0.1
                     , string-conv
                     , text >= 1.2.0.0 && < 1.3
                     , thyme
                     , time
                     , transformers
                     , trifecta
                     , unix >= 2.7.1.0
                     , unordered-containers
                     , utf8-string >= 1.0.1.1
                     , vector >= 0.11.0.0
                     , vector-space >= 0.10.4 && < 0.16
                     , wai-cors
                     , warp
                     , wreq
                     , yaml
                     , zeromq4-haskell >= 0.6.3
                     , zlib
  other-modules:     Paths_kadena
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-do-bind -O3
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010
  if flag(pact-persistence)
     cpp-options: -DENABLE_PACT_PERSISTENCE=1
  if flag(kill-switch)
     cpp-options: -DWITH_KILL_SWITCH=1
  if flag(aws-kill-switch)
     cpp-options: -DWITH_AWS_KILL_SWITCH=1

executable genconfs
  main-is:             GenerateConfigFiles.hs
  build-depends:       base < 5
                     , bytestring
                     , containers
                     , unordered-containers
                     , crypto-api
                     , directory
                     , ed25519-donna
                     , filepath
                     , kadena
                     , network
                     , text
                     , thyme
                     , yaml
                     , pact
                     , data-default
                     , lens
  hs-source-dirs:      executables
  ghc-options:         -Wall -threaded -rtsopts
  default-language:    Haskell2010

executable kadenaserver
  main-is:             KadenaServer.hs
  build-depends:       base < 5
                     , kadena
  hs-source-dirs:      executables
  ghc-options:         -Wall -threaded -O3 -rtsopts -with-rtsopts=-N -with-rtsopts=-T
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

executable kadenaclient
  main-is:             KadenaClient.hs
  build-depends:       base < 5
                     , kadena
                     , base16-bytestring
                     , extra
  hs-source-dirs:      executables
  ghc-options:         -Wall -threaded -O3 -rtsopts -with-rtsopts=-N4
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

executable inserts
  main-is:       Main.hs
  other-modules: Util.TestRunner
  build-depends:       base < 5
                     , aeson
                     , cmdargs
                     , bytestring
                     , data-default
                     , ed25519-donna
                     , exceptions
                     , extra
                     , hspec
                     , http-client
                     , HUnit
                     , kadena
                     , lens
                     , pact
                     , process
                     , safe
                     , text
                     , transformers
                     , trifecta
                     , unordered-containers
                     , wreq
                     , yaml
  hs-source-dirs:     executables/inserts
                    , tests
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N4

  default-language:   Haskell2010

test-suite hspec
  type: exitcode-stdio-1.0
  main-is: hspec.hs
  hs-source-dirs: tests
  ghc-options:       -Wall -threaded -O3 -rtsopts -with-rtsopts=-N4
  default-language:  Haskell2010
  other-modules:     ConfigChangeFileSpec
                   , ConfigChangeSpec
                   , ConfigSpec
                   , EvidenceSpec
                   , Util.TestRunner
                   , WireFormatSpec
  build-depends:     aeson
                   , async
                   , base
                   , base16-bytestring
                   , bytestring
                   , containers
                   , crypto-api
                   , data-default
                   , deepseq
                   , ed25519-donna
                   , errors
                   , exceptions
                   , extra
                   , hspec
                   , http-client
                   , kadena
                   , lens
                   , mtl
                   , pact
                   , process
                   , safe
                   , safe-exceptions
                   , scientific
                   , scientific >= 0.3.6.2
                   , text
                   , transformers
                   , trifecta
                   , unordered-containers
                   , vector
                   , wreq
                   , yaml
